API and Distribution Service Created

--- a/API/invoice-api-v1.yaml
+++ b/API/invoice-api-v1.yaml
@@ -5,7 +5,7 @@ info:
   title: " Invoice API"
 
 paths:
-  /invoice{CVR}:
+  /invoice/{CVR}:
     get:
       operationId: "getInvoice"
       parameters:
